<resources>
    <string name="app_name">Master Lock Demo</string>
    <string name="sdk_license_error_body">The SDK license used for this build is invalid. Check your MLSDKLICENSE string in app/build.gradle</string>
    <string name="error">Error</string>
    <string name="start_scan">Start Scanning</string>
    <string name="unlock_lock">Unlock Lock</string>
    <string name="release_shackle">Release Shackle</string>
    <string name="this_app_needs_your_permission">This app needs your permission to use location in order to discover bluetooth locks.</string>
    <string name="ok">OK</string>
    <string name="permission_denied">Need Location Permission</string>
    <string name="location_permission_required">Location Permission Required</string>
    <string name="scanning">Scanning For Bluetooth Locks</string>
    <string name="unlocked">Unlocked</string>
    <string name="battery">Battery</string>
    <string name="open">Open</string>
    <string name="available">Available</string>
    <string name="fetch_profile">Fetch Profile</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_shackle">Unlock Shackle</string>
    <string name="locked">Locked</string>
    <string name="get_profile">Get Profile</string>
    <string name="requesting_profile_from_api">Fetching Profile…</string>
    <string name="primary_lock">Primary Lock</string>
    <string name="secondary_lock">Secondary Lock</string>
    <string name="the_bluetooth_adapter_is_off">The Bluetooth Adapter is OFF</string>
    <string name="connected_products_api_error">Connected Products API Error</string>
    <string name="shackles">Shackles</string>
    <string name="available_locks">Available Locks</string>
    <string name="no_locks_in_range_press_any_button_on_your_lock_to_wake_it_up">No Locks in Range. Press Any Button on Your Lock To Wake It Up.</string>
    <string name="relock">Relock</string>
    <string name="settings">Settings</string>
    <string name="firmware_update">Firmware Update</string>
    <string name="set_left_handed">Set Left Handed True</string>
    <string name="set_left_handed_false">Set Left Handed False</string>
    <string name="cancel">cancel</string>
    <string name="firmware_updating">Firmware Updating</string>
    <string name="please_wait">Please Wait</string>
    <string name="do_update">Do Update</string>
    <string name="select_version">Select Version</string>
    <string name="percent_complete">%1$d%%</string>
    <string name="current_version">Current Version: %d</string>
</resources>